Fix spacing in timestamp

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -19,7 +19,7 @@ body {
     font-size: 15px;
     vertical-align: bottom;
     margin-right: 10px;
-    flex: 0 0 156px;
+    flex: 0 0 164px;
 }
 
 .plain, .cipher {
